--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+.card {
+
+}
 .description {
     text-transform: capitalize;
 
@@ -27,4 +30,10 @@
 .listCities {
     overflow-y: auto !important;
     overflow-x: auto;
+}
+@media screen and (max-width: 992px) {
+    .card {
+        width: 70%
+    }
+    
 }
