--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@
 
 }
 
-.day-1, .day-2, .day-3, .day-4 {
+/* .day-1, .day-2, .day-3, .day-4 {
     border: 3px solid blue;
-}
+} */
 
 .searchBar {
     display: block;
